# serializer version: 1
# name: test_swagger_paths[demo]
  list([
  ])
# ---
# name: test_swagger_paths[kt_ag]
  list([
    'delete:/ech/v1/files/{id}',
    'get:/api/v1/groups',
    'get:/api/v1/groups/{group_id}',
    'get:/api/v1/me',
    'get:/api/v1/public-services',
    'get:/api/v1/public-services/{service_id}',
    'get:/ech/v1/application/{instance_id}/',
    'get:/ech/v1/applications',
    'get:/ech/v1/files/{id}',
    'get:/ech/v1/message/',
    'post:/ech/v1/files',
    'post:/ech/v1/send/',
  ])
# ---
# name: test_swagger_paths[kt_bern]
  list([
    'delete:/api/v1/attachments/{attachment_id}',
    'delete:/ech/v1/files/{id}',
    'get:/api/v1/attachment-sections',
    'get:/api/v1/attachment-sections/{attachment_section_id}',
    'get:/api/v1/attachments',
    'get:/api/v1/attachments/files/',
    'get:/api/v1/attachments/{attachment_id}',
    'get:/api/v1/groups',
    'get:/api/v1/groups/{group_id}',
    'get:/api/v1/instances/{instance_id}/generate-pdf',
    'get:/api/v1/me',
    'get:/api/v1/public-services',
    'get:/api/v1/public-services/{service_id}',
    'get:/ech/v1/application/{instance_id}/',
    'get:/ech/v1/applications',
    'get:/ech/v1/categories',
    'get:/ech/v1/documents',
    'get:/ech/v1/documents/{id}',
    'get:/ech/v1/files/multi-download',
    'get:/ech/v1/files/{id}',
    'get:/ech/v1/message/',
    'post:/api/v1/attachments',
    'post:/ech/v1/files',
    'post:/ech/v1/send/',
  ])
# ---
# name: test_swagger_paths[kt_gr]
  list([
    'delete:/ech/v1/documents/{id}',
    'delete:/ech/v1/documents/{id}/decision',
    'delete:/ech/v1/documents/{id}/publication',
    'delete:/ech/v1/documents/{id}/sensitive',
    'delete:/ech/v1/documents/{id}/void',
    'delete:/ech/v1/files/{id}',
    'get:/api/v1/groups',
    'get:/api/v1/groups/{group_id}',
    'get:/api/v1/me',
    'get:/api/v1/public-services',
    'get:/api/v1/public-services/{service_id}',
    'get:/ech/v1/application/{instance_id}/',
    'get:/ech/v1/applications',
    'get:/ech/v1/documents',
    'get:/ech/v1/documents/{id}',
    'get:/ech/v1/files/{id}',
    'get:/ech/v1/message/',
    'post:/ech/v1/documents/{id}/decision',
    'post:/ech/v1/documents/{id}/publication',
    'post:/ech/v1/documents/{id}/sensitive',
    'post:/ech/v1/documents/{id}/void',
    'post:/ech/v1/files',
    'post:/ech/v1/send/',
  ])
# ---
# name: test_swagger_paths[kt_schwyz]
  list([
    'delete:/api/v1/attachments/{attachment_id}',
    'get:/api/v1/attachments',
    'get:/api/v1/attachments/files/',
    'get:/api/v1/attachments/{attachment_id}',
    'get:/api/v1/groups',
    'get:/api/v1/groups/{group_id}',
    'get:/api/v1/me',
    'get:/ech/v1/application/{instance_id}/',
    'get:/ech/v1/applications',
    'get:/ech/v1/files/multi-download',
    'get:/ech/v1/files/{id}',
    'get:/ech/v1/message/',
    'post:/api/v1/attachments',
  ])
# ---
# name: test_swagger_paths[kt_sg]
  list([
  ])
# ---
# name: test_swagger_paths[kt_so]
  list([
    'delete:/ech/v1/files/{id}',
    'get:/api/v1/groups',
    'get:/api/v1/groups/{group_id}',
    'get:/api/v1/me',
    'get:/api/v1/public-services',
    'get:/api/v1/public-services/{service_id}',
    'get:/ech/v1/application/{instance_id}/',
    'get:/ech/v1/applications',
    'get:/ech/v1/files/{id}',
    'get:/ech/v1/message/',
    'post:/ech/v1/files',
    'post:/ech/v1/send/',
  ])
# ---
# name: test_swagger_paths[kt_uri]
  list([
    'delete:/v1/attachments/{attachment_id}',
    'get:/v1/attachments',
    'get:/v1/attachments/files/',
    'get:/v1/attachments/{attachment_id}',
    'get:/v1/public-caluma-instances',
    'post:/v1/attachments',
  ])
# ---
# name: test_swagger_paths[test]
  list([
    'delete:/api/v1/attachments/{attachment_id}',
    'delete:/ech/v1/files/{id}',
    'get:/api/v1/attachment-sections',
    'get:/api/v1/attachment-sections/{attachment_section_id}',
    'get:/api/v1/attachments',
    'get:/api/v1/attachments/files/',
    'get:/api/v1/attachments/{attachment_id}',
    'get:/api/v1/groups',
    'get:/api/v1/groups/{group_id}',
    'get:/api/v1/me',
    'get:/api/v1/public-services',
    'get:/api/v1/public-services/{service_id}',
    'get:/ech/v1/application/{instance_id}/',
    'get:/ech/v1/applications',
    'get:/ech/v1/categories',
    'get:/ech/v1/documents',
    'get:/ech/v1/documents/{id}',
    'get:/ech/v1/files/multi-download',
    'get:/ech/v1/files/{id}',
    'get:/ech/v1/message/',
    'post:/api/v1/attachments',
    'post:/ech/v1/files',
    'post:/ech/v1/send/',
  ])
# ---
